--- a/src/main/resources/templates/register_form.html
+++ b/src/main/resources/templates/register_form.html
@@ -8,8 +8,14 @@
   <div align="center">
     <h1>User Registration Form</h1>
     <form action="#" th:action="@{/register}" th:object="${user}" method="post">
+
       <label for="fullName">Full Name:</label>
-      <input type="text" id="fullName" th:field="*{name}"/>
+      <input type="text" id="fullName" th:field="*{name}"/><br/>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" th:field="*{email}"/><br/>
+
+      <button type="submit">Register</button>
     </form>
   </div>
 </body>
